--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@
     \end{mdframed}
     This could be due to the difference in wire lengths, as the CH2 wire was 70cm, while the CH1 wire was 210cm long. We can use this to very roughly calculate the speed of the signal:
     $$v = \frac{\Delta \ell}{\Delta t} = \frac{140cm}{8.4ns} \approx 0.55c$$
-    which seems reasonable for electrons in copper wire. \textbf{TODO: get two cables of the same length and verify that this is actually the case.}
+    which seems reasonable for electrons in copper wire. \textbf{TODO: get two cables of the same length and verify that the phase lag goes away.}
     \subsection*{Programming the function generator with a computer (LAN)}
     Useful resources:
     \begin{itemize}
@@ -97,7 +97,7 @@
     \item Programming Reference: \textbf{DG4000\_ProgrammingGuide\_EN.chm} (in the repo)
     \item \href{https://download.rigol.com/cn/Software/UltraSigma.zip}{Download Ultra Sigma Software}
     \end{itemize}
-    A script for sending a waveform to the AFV via LAN can be found in the Python file \textbf{LAN\_waveform\_test.py}, and follows the tutorial in the first link\\\\
+    A script for sending a waveform to the AFG via LAN can be found in the Python file \textbf{LAN\_waveform\_test.py}, and follows the tutorial in the first link\\\\
     Setup: Connect the AFG to the computer by Ethernet, go to Utility $\to$ I/O $\to$ LAN and ensure the IP address matches the one in the script. Then, use the script to specify the desired waveform functions, frequency, and voltage range.
     \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 5.8in]
     \includegraphics[width = 5.5in]{img/LAN_signal.png}
@@ -110,4 +110,63 @@
     \\Ultra Sigma LAN interface
     \end{mdframed}
     Connecting via the USB-B port on the back of the AFG yields the same interface. There is the Ultra Station software that offers more tools for making waveforms, but it is paid and requires a licence. Therefore, LAN/python seems like the best approach moving forward unless we need any advanced features that cannot be reasonably implemented in that approach.
+    \section*{Fri 3/1}
+    \subsection*{Verifying phase difference from last time due to cables}
+    We further test the hypothesis that the difference in cable lengths produced the phase lag observed last time. A new cable of length 210cm was obtained, and the same AWG settings were used (6MHz, 200m$v_{pp}$, $0^\circ$ start phase). Then, we verify that there is no longer any phase difference after "Align Phase" is used on the AWG:
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 4.8in]
+    \includegraphics[width = 4.5in]{img/CableLagFixed.png}
+    \\No visible peak-peak difference after 210cm cables are used for both channels; data collection via USB drive
+    \end{mdframed}
+    Therefore, we get further verification of the hypothesis from 2/23 that the phase lag was due to the difference in cable lengths.
+    \subsection*{Triggering}
+    General settings for oscilloscope: N Cycle burst, 1MHz, $200mV_{pp}.$ For burst, Cycles = 500,000 which means the total pulse duration is $0.5s.$ $N$ can be set arbitrarily, so it is also possible to set smaller numbers of waves to be generated in each pulse, (i.e. a single wave per pulse), depending on the application.\\\\
+    Manual trigger: A pulse is generated each time the Trigger button on the oscilloscope is pressed.\\\\
+    External trigger using the signal generator on the oscilloscope: Connect $G1$ on the oscilloscope to the [Mod/FSK/Trig] connector on the back of the oscilloscope. Then, set G1 to the following settings: [Ramp waveform, 1Hz, 5$V_{pp}$]. \textbf{TODO: DG4000 manual suggests using a TTL pulse to trigger but the oscilloscope can only generate Ramp waveforms, figure out if there's a difference.}\\\\
+    \textbf{TODO: Get a signal splitter to visualize the trigger waveform on the oscilloscope.} Current (somewhat questionable) workaround: set G2 on the oscilloscope to the same waveform settings as $G1$ and align phase for an (approximate) visual reference.
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 4.8in]
+    \includegraphics[width = 4.5in]{img/TriggerTest1.png}
+    \\Approx. 95ms lag between trigger point (trailing slope) and the start of the burst.
+    \end{mdframed}
+    We see that there is a 95ms delay between the start of the trigger point (trailing slope) and when the signal is actually received by the oscilloscope. Note that the "Delay" option on the AWG is set to 0, so the delay seems to be intrinsic to the system.\\\\
+    Test 2: Higher triggering frequency: Set Cycles = 5000 (5ms pulse), trigger frequency to $100Hz$. We still see a lag, which is $1ms$ this time.\\\\
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 4.8in]
+    \includegraphics[width = 4.5in]{img/TriggerTest2.png}
+    \end{mdframed}
+    Test 3: Even higher frequency: Cycles = $5$ (5$\mu s$ pulse), trigger frequency to $100KHz$. The scope seems slightly unstable (waveforms are wobbling slightly - which could be due to triggering settings, etc (trigger based on the $G1$ function from the oscilloscope). However, the waveforms are still well-formed, and there is a delay of $1.27 \mu s$
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 3.8in]
+    \includegraphics[width = 3.5in]{img/TriggerTest3.png}
+    \end{mdframed}
+    Conclusions: Triggering using the AWG output from the oscilloscope produces a clean signal for trigger/pulse frequencies of up to 100 $KHz,$ which was the highest trigger frequency tested. Using the ramp waveform to trigger, there appears to be a delay between the start of the trigger and the waveform being produced, of roughly $\frac{1}{10}T,$ where $T$ is the period of the trigger.
+    \subsubsection*{Hypothesis}
+    Hypothesis: This is due to the oscilloscope needing time to detect the falling edge on the ramp waveform, so this could be fixed if a more appropriate trigger waveform was selected (e.g. TTL). However, it is natural to expect some delay due to factors intrinsic to the system, and in any case it should be possible to calibrate out the delay.
+    \subsubsection*{Further Experiments with a square wave}
+    A square wave has a much faster drop-off, so would it decrease the latency? 
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 3.8in]
+    \includegraphics[width = 3.5in]{img/TriggerTestSq.png}
+    \end{mdframed}
+    \begin{table}[H]
+    \centering
+    \begin{tabular}{|l|l|l|l|}
+    \hline
+    Signal Freq & 1Hz & 100Hz & 100KHz \\ \hline
+    Ramp Delay & 95ms & 5ms & 1.3 $\mu s$ \\ \hline
+    Square Delay & $\sim 0.5 \mu s$ & $0.4 \mu s$ & $0.46 \mu s$ \\ \hline
+    \end{tabular}
+    \end{table}
+    Conclusion: there is approx. $0.4\mu s$ intrinsic delay between the triggering signal and the waveform being generated, and the delay from before was due to the ramp wave.
+    \newpage
+    \subsection*{Writing Arbitrary Functions, Windowing, Spectral Analyzer}
+    Friday Afternoon: spectral analyzer could not be located, so instead logged data from the oscilloscope and used SciPy Fourier transform.
+    \subsubsection*{First proof of concept}
+    \noindent Let us begin by defining a wave
+    $$A(x) = \sin(50(2\pi x)) + \sin(80(2\pi x)),$$
+    and consider a sample in $x \in [0, 3/4].$ Because the sample is limited to an interval, it is implicitly windowed with an uniform window function. We can also consider the same sample but explicitly windowed with a Blackman window function:
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 4.8in]
+    \includegraphics[width = 4.5in]{img/window_function_plot.png}
+    \end{mdframed}
+    We can see that the spectral leakage is significantly lower with the Blackman window function:
+    \begin{mdframed}[backgroundcolor=gray!20, align = center, userdefinedwidth = 3.8in]
+    \includegraphics[width = 3.5in]{img/WindowedLeakage.png}
+    \end{mdframed}
+    Now, we proceed to test this using the AWG and oscilloscope. Use the code from before to send the function to the AWG:
 \end{document}
